package taskfusion.cli.views;

interface ViewInterface {
    void show();
}
