package taskfusion.viewModels;

public class ViewModel {

}
