@startuml TaskFusion-CLI 

circle "TaskFusion (Facade)" as taskFusion

class TaskFusionCLI {
    - taskfusion : TaskFusion
    - scanner : Scanner
    --
    # taskFusion() : TaskFusion
    # getInstance() : TaskFusionCLI
    + mainLoop() : void
}

interface ControllerInterface {
    --
    showMenu() : void
}

class ____MenuController {
    --
}


interface ViewInterface {
    --
    show() : void
}

class ____View {
    --
}

class ____Component

taskFusion -- TaskFusionCLI

TaskFusionCLI -->"1" ____MenuController

____MenuController --|> ControllerInterface
____View --|> ViewInterface
____MenuController -->"0..*" ____View
____View -->"0..1"  ____MenuController
____View -->"0..*" ____Component


@enduml